--- a/Manish.github.io.html
+++ b/Manish.github.io.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Manish's Domain</title>
+    <title>lucas's Domain</title>
     <!-- Link to Google Fonts for Dancing Script -->
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;700&display=swap" rel="stylesheet">
 
